dynamic mandatory added

--- a/src/app/modules/appconfigdata/configboard/configboard.component.html
+++ b/src/app/modules/appconfigdata/configboard/configboard.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title style="margin:20px">Report Configuration </mat-card-title>
+    <mat-card-title style="margin:20px">Field Configuration </mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content style="margin:20px">
         
