--- a/src/app/modules/appconfigdata/userconfigreportname/userconfigreportname.component.html
+++ b/src/app/modules/appconfigdata/userconfigreportname/userconfigreportname.component.html
@@ -1,12 +1,12 @@
 <div style="max-height: inherit;">
     <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Re-define Report Name</strong></div>
+        <div><strong>Re-define Module Name</strong></div>
     </div>
     <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <!-- <alert></alert> -->
     <form [formGroup]="searchForm">
         <mat-form-field appearance="outline" [style.width.px]="300">
-            <mat-label>Available Reports</mat-label>
+            <mat-label>Available Module</mat-label>
             <mat-select formControlName="searchAvailableReportName" (selectionChange)="EnableButton()">
                 <mat-option *ngFor="let item of AvailableReportNames" [value]="item.ReportConfigItemId">
                     {{item.ReportName}}
