employee upload rectified

--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -54,6 +54,7 @@
                                        || element.MasterDataName=='Teacher'
                                        || element.MasterDataName=='Student'
                                        || element.MasterDataName=='Employee'
+                                       || element.MasterDataName=='Employee Upload'
                                        || element.MasterDataName=='Cash'
                                        || element.MasterDataName=='Teaching'  
                                        || element.MasterDataName=='Non Teaching')" matInput
