--- a/src/app/modules/employeedetail/employee/employee.component.html
+++ b/src/app/modules/employeedetail/employee/employee.component.html
@@ -96,8 +96,7 @@
                                 {{p.MasterDataName}}
                             </mat-option>
                         </mat-select>
-                        <span class="text-danger" *ngIf="f.Gender.touched && f.Gender.hasError('required')">Gender
-                            is required.</span>
+                        
                     </mat-form-field>
                 </mat-grid-tile>
                 <mat-grid-tile [colspan]="1" [rowspan]="1">
@@ -421,6 +420,12 @@
                     <input formControlName="AadharNo" (blur)="OnBlur()" autocomplete="Off" matInput [maxlength]="12">
                 </mat-form-field>
             </div>
+            <div class="content" fxLayout="row wrap">
+                <mat-form-field appearance="outline" [style.width.px]="500">
+                    <mat-label>ID Mark</mat-label>
+                    <input formControlName="IDMark" (blur)="OnBlur()" autocomplete="Off" matInput [maxlength]="100">
+                </mat-form-field>
+                </div>
             <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
                 <button [disabled]="loading" *ngIf="selectedIndex>0" (click)="previousStep()" matTooltip="previous tab"
                     mat-raised-button>
