--- a/src/app/modules/employeedetail/employeeboard/employeeboard.component.html
+++ b/src/app/modules/employeedetail/employeeboard/employeeboard.component.html
@@ -1,7 +1,7 @@
 
 <mat-card>
-    <mat-card-title style="margin: 20px;">Employee</mat-card-title>
-    <mat-card-subtitle style="margin:20px"
+    <mat-card-title style="margin: 25px 0px 25px 30px;">Employee</mat-card-title>
+    <mat-card-subtitle style="margin:25px"
     style="align-items: center; font-weight: bold; background-color:lightgray;padding:15px;margin: 0px 20px 0px 20px;display: flex;justify-content: space-between;">
         <span>{{EmployeeName}}</span>
         <span><button (click)="back()" matTooltip="back" class="mat-raised-button">
