--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -22,6 +22,11 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
+            
+            <mat-form-field appearance="outline" style="width: 150px;">
+                <mat-label>Admission No.</mat-label>
+                <input formControlName="searchAdmissionNo" autocomplete="Off" matInput [maxlength]="10">
+            </mat-form-field>
             <mat-form-field appearance="outline" style="width: 100px;">
                 <mat-label>PID</mat-label>
                 <input formControlName="searchPID" autocomplete="Off" matInput [maxlength]="10">
