--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="flex-container" autosize="true">
+<mat-sidenav-container style="margin-top:20px ;" class="flex-container" autosize="true">
     <mat-sidenav style="padding: 17px;" mode="side" opened (click)="toggleSidebar()">
         <div mat-menu-item *ngFor="let i of sideMenu" [routerLink]="[i.link]" class="with-icon padded"
             (click)="$event.stopPropagation()">
