--- a/src/app/modules/control/add-master-data/add-master-data.component.scss
+++ b/src/app/modules/control/add-master-data/add-master-data.component.scss
@@ -51,7 +51,7 @@ mat-form-field {
 .mat-column-Description,.mat-column-Logic {
     flex:1 0 220px;
 }
-.mat-column-Active{
+.mat-column-Active,.mat-column-Confidential{
     
     justify-content: center;
     flex:1 0 100px;
