--- a/src/app/modules/classes/classdetail/classdetail.component.html
+++ b/src/app/modules/classes/classdetail/classdetail.component.html
@@ -131,6 +131,15 @@
             </mat-form-field>
         </mat-cell>
     </ng-container>
+    <ng-container matColumnDef="Confidential">
+        <mat-header-cell *matHeaderCellDef>Confidential
+        </mat-header-cell>
+        <mat-cell style="justify-content: center;" *matCellDef="let element">
+            <mat-checkbox (click)="$event.stopPropagation()" (change)="updateConfidential(element,$event)"
+                [checked]="element.Confidential">
+            </mat-checkbox>
+        </mat-cell>
+    </ng-container>
     <ng-container matColumnDef="Active">
         <mat-header-cell *matHeaderCellDef>Active
         </mat-header-cell>
