--- a/src/app/modules/classes/classdetail/classdetail.component.scss
+++ b/src/app/modules/classes/classdetail/classdetail.component.scss
@@ -13,7 +13,7 @@ button{
     flex: 1 0 135px;
 }
 .mat-column-MaxStudent,.mat-column-MinStudent,
-.mat-column-Action{
+.mat-column-Action,.mat-column-Confidential{
     flex: 1 0 100px;
 }
 .mat-column-ClassId{
