--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -103,6 +103,15 @@
                 </mat-form-field>
             </mat-cell>
         </ng-container>
+        <ng-container matColumnDef="Confidential">
+            <mat-header-cell *matHeaderCellDef style="justify-content: center;">Confidential               
+            </mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <mat-checkbox (click)="$event.stopPropagation()" (change)="updateConfidential(element,$event)"
+                    [checked]="element.Confidential">
+                </mat-checkbox>
+            </mat-cell>
+        </ng-container>
         <ng-container matColumnDef="Active">
             <mat-header-cell *matHeaderCellDef style="justify-content: center;">
                 <button style="margin-right: 15px;"
