--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -17,12 +17,12 @@
             <mat-form-field appearance="outline" style="width: 150px;">
                 <mat-label>Remarks</mat-label>
                 <mat-select formControlName="searchRemarkId">
+                    <mat-option value="0">select</mat-option>
                     <mat-option *ngFor="let item of Remarks" [value]="item.MasterDataId">
                         {{item.MasterDataName}}
                     </mat-option>
                 </mat-select>
-            </mat-form-field>
-            
+            </mat-form-field>            
             <mat-form-field appearance="outline" style="width: 150px;">
                 <mat-label>Admission No.</mat-label>
                 <input formControlName="searchAdmissionNo" autocomplete="Off" matInput [maxlength]="10">
@@ -31,15 +31,13 @@
                 <mat-label>PID</mat-label>
                 <input formControlName="searchPID" autocomplete="Off" matInput [maxlength]="10">
             </mat-form-field>
-            <mat-form-field appearance="outline">
+            <!-- <mat-form-field appearance="outline">
                 <mat-label>Father</mat-label>
                 <input type="text" matInput formControlName="FatherName" [matAutocomplete]="autoF">
                 <mat-autocomplete #autoF="matAutocomplete" [displayWith]="displayFnF">
-                    <!-- <cdk-virtual-scroll-viewport itemSize="25"> -->
                     <mat-option *ngFor="let option of filteredFathers | async" [value]="option">
                         {{option.FatherName}}
                     </mat-option>
-                    <!-- </cdk-virtual-scroll-viewport> -->
                 </mat-autocomplete>
             </mat-form-field>
             <mat-form-field appearance="outline">
@@ -50,7 +48,7 @@
                         {{option.MotherName}}
                     </mat-option>
                 </mat-autocomplete>
-            </mat-form-field>
+            </mat-form-field> -->
 
             <mat-form-field appearance="outline" [style.width.px]="350">
                 <mat-label>Student</mat-label>
