--- a/src/app/modules/studentactivity/studentfamilynfriend/studentfamilynfriend.component.scss
+++ b/src/app/modules/studentactivity/studentfamilynfriend/studentfamilynfriend.component.scss
@@ -14,13 +14,14 @@ mat-form-field{
 
 .mat-column-Action,.mat-column-Active
 {
+    justify-content: center;
     flex:1 0 80px;
 }
 .mat-column-SiblingId
 {
-    flex: 1 0 200px;
+    flex: 1 0 250px;
 }
 .mat-column-StudentFamilyNFriendId{
-    justify-content: center;
-    flex: 1 0 100px;
+  //  justify-content: center;
+    flex: 1 0 60px;
 }
